Fix: typeahead breaks on scroll.
Codemirror has behavior for scrolling with the typeahead open to track the current token. Our previous wrapping technique broke with this behavior. This PR simplifies the augmenting technique which no longer breaks.

Fixes #284

--- a/css/show-hint.css
+++ b/css/show-hint.css
@@ -14,21 +14,6 @@
   z-index: 10;
 }
 
-.CodeMirror-hints-wrapper {
-  background: white;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.45);
-  margin-left: -6px;
-  position: absolute;
-  z-index: 10;
-}
-
-.CodeMirror-hints-wrapper .CodeMirror-hints {
-  box-shadow: none;
-  margin-left: 0;
-  position: relative;
-  z-index: 0;
-}
-
 .CodeMirror-hint {
   border-top: solid 1px #f7f7f7;
   color: #141823;
